--- a/DSP/EventosApp/Pages/index.html
+++ b/DSP/EventosApp/Pages/index.html
@@ -1,6 +1,6 @@
 ﻿<!DOCTYPE html>
 
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml" ng-app="eventosApp">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" data-ng-app="eventosApp">
 <head>
     <meta charset="utf-8" />
     <title></title>
@@ -8,19 +8,19 @@
     <!-- libs -->
     <script src="Scripts/jquery-1.9.1.js"></script>
     <script src="Scripts/angular.js"></script>
-
+    <script src="Scripts/angular-route.js"></script>
     <!-- app -->
     <script src="App/app.js"></script>
 
     <!-- controllers -->
-    <script src="App/Controllers/mainController.js"></script>
-    <script src="App/Controllers/eventosController.js"></script>
+    <script src="App/Controllers/MainController.js"></script>
+    <script src="App/Controllers/ListarEventosController.js"></script>
+    <script src="App/Controllers/DetalharEventosController.js"></script>
 
     <!-- services -->
-    <script src="App/Services/eventosService.js"></script>
+    <script src="App/Services/EventosService.js"></script>
 </head>
 <body>
-    <div ng-include="'App/Views/layout/topo.html'"></div>
-    <div ng-include="'App/Views/eventos/listar.html'"></div>
+    <div ng-view></div>
 </body>
 </html>
