--- a/DSP/EventosApp/Pages/app.html
+++ b/DSP/EventosApp/Pages/app.html
@@ -8,6 +8,8 @@
     <!-- libs -->
     <script src="Scripts/jquery-1.9.1.js"></script>
     <script src="Scripts/angular.js"></script>
+    <script src="Scripts/angular-resource.js"></script>
+    <script src="Scripts/angular-cookies.js"></script>
     <script src="Scripts/angular-route.js"></script>
     <!-- app -->
     <script src="App/app.js"></script>
