--- a/DSP/EventosApp/Pages/app.html
+++ b/DSP/EventosApp/Pages/app.html
@@ -7,22 +7,31 @@
 
     <!-- libs -->
     <script src="Scripts/jquery-1.9.1.js"></script>
+    <script src="/_layouts/15/SP.UI.Controls.js"></script>
     <script src="Scripts/angular.js"></script>
     <script src="Scripts/angular-resource.js"></script>
     <script src="Scripts/angular-cookies.js"></script>
     <script src="Scripts/angular-route.js"></script>
+
+
+    <!-- helpers -->
+    <script src="App/Helpers/jquery.helpers.js"></script>
+
     <!-- app -->
     <script src="App/app.js"></script>
 
     <!-- controllers -->
+    <script src="App/Controllers/SharePointAppChromeController.js"></script>
     <script src="App/Controllers/MainController.js"></script>
     <script src="App/Controllers/ListarEventosController.js"></script>
     <script src="App/Controllers/DetalharEventosController.js"></script>
 
     <!-- services -->
     <script src="App/Services/EventosService.js"></script>
+    <script src="App/Services/SharePointContextService.js"></script>
 </head>
 <body>
-    <div ng-view></div>
+    <div data-ng-include="'App/Views/layout/sharepointAppChrome.html'"></div>
+    <div data-ng-view></div>
 </body>
 </html>
