integracao basica com sharepoint rest api para listar os eventos.

--- a/DSP/EventosApp/Pages/app.html
+++ b/DSP/EventosApp/Pages/app.html
@@ -23,6 +23,9 @@
     <![endif]-->
     <!-- libs -->
     <script src="Scripts/jquery-1.9.1.js"></script>
+    <!--<script src="/_layouts/15/SP.Runtime.js"></script>
+    <script src="/_layouts/15/SP.js"></script>
+    <script src="/_layouts/15/SP.RequestExecutor.js"></script>-->
     <script src="/_layouts/15/SP.UI.Controls.js"></script>
     <script src="Scripts/angular.js"></script>
     <script src="Scripts/angular-resource.js"></script>
@@ -43,7 +46,8 @@
     <script src="App/Controllers/DetalharEventosController.js"></script>
 
     <!-- services -->
-    <script src="App/Services/EventosService.js"></script>
+    <!--<script src="App/Services/EventosService.js"></script>-->
+    <script src="App/Services/SharePointEventosService.js"></script>
     <script src="App/Services/SharePointContextService.js"></script>
 </head>
 <body>
