base da inscrição

--- a/DSP/EventosApp/Pages/app.html
+++ b/DSP/EventosApp/Pages/app.html
@@ -47,12 +47,13 @@
 
     <!-- services -->
     <!--<script src="App/Services/EventosService.js"></script>-->
-    <script src="App/Services/SharePointEventosService.js"></script>
+    <!--<script src="App/Services/SharePointEventosService.js"></script>-->
+    <script src="App/Services/SharePointDataContextService.js"></script>
     <script src="App/Services/SharePointContextService.js"></script>
 </head>
 <body>
     <div data-ng-include="'App/Views/layout/sharepointAppChrome.html'"></div>
-    
+
     <div data-ng-view></div>
     <div class="container">
         <hr />
