--- a/DSP/EventosApp/Pages/app.html
+++ b/DSP/EventosApp/Pages/app.html
@@ -14,6 +14,7 @@
     <link href="Content/bootstrap.min.css" rel="stylesheet" />
     <link href="Content/App.css" rel="stylesheet" />
     <link href="Content/font-awesome.css" rel="stylesheet" />
+    <link href="Content/sweet-alert.css" rel="stylesheet" />
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -33,6 +34,8 @@
     <script src="Scripts/angular-route.js"></script>
     <script src="Scripts/bootstrap.min.js"></script>
     <script src="Scripts/moment-with-locales.js"></script>
+    <script src="Scripts/sweet-alert.min.js"></script>
+
     <!-- helpers -->
     <script src="App/Helpers/jquery.helpers.js"></script>
 
