--- a/DSP/EventosApp/Pages/app.html
+++ b/DSP/EventosApp/Pages/app.html
@@ -32,10 +32,12 @@
     <script src="Scripts/angular-resource.js"></script>
     <script src="Scripts/angular-cookies.js"></script>
     <script src="Scripts/angular-route.js"></script>
+    <script src="Scripts/angular-sanitize.min.js"></script>
+    <script src="Scripts/angular-animate.min.js"></script>
     <script src="Scripts/bootstrap.min.js"></script>
     <script src="Scripts/moment-with-locales.js"></script>
     <script src="Scripts/sweet-alert.min.js"></script>
-
+    
     <!-- helpers -->
     <script src="App/Helpers/jquery.helpers.js"></script>
 
@@ -51,6 +53,8 @@
     <!-- services -->
     <!--<script src="App/Services/EventosService.js"></script>-->
     <!--<script src="App/Services/SharePointEventosService.js"></script>-->
+    <script src="App/Services/inscricaoService.js"></script>
+    <script src="App/Services/usuarioService.js"></script>
     <script src="App/Services/SharePointDataContextService.js"></script>
     <script src="App/Services/SharePointContextService.js"></script>
 </head>
