ajustes e refatorada de leve

--- a/DSP/EventosApp/Pages/launcher.html
+++ b/DSP/EventosApp/Pages/launcher.html
@@ -22,9 +22,9 @@
     <script src="App/Controllers/LauncherController.js"></script>
 
     <!-- services -->
-    <script src="App/Services/SharePointContextService.js"></script>
+    <script src="App/Services/sharepointContextService.js"></script>
 
 </head>
-<body data-ng-controller="LauncherController">
+<body data-ng-controller="launcherController as ctrl">
 </body>
 </html>
