--- a/DSP/EventosApp/Pages/app.html
+++ b/DSP/EventosApp/Pages/app.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title></title>
+    <title data-ng-bind="'Treinamentos, Cursos e Workshops' + tituloDaPagina"></title>
 
     <!-- fonts -->
     <link href='https://fonts.googleapis.com/css?family=Montserrat|Yanone+Kaffeesatz' rel='stylesheet' type='text/css'>
@@ -17,18 +17,15 @@
     <link href="Content/animate.css" rel="stylesheet" />
     <link href="Content/App.css" rel="stylesheet" />
 
-
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+
     <!-- libs -->
     <script src="Scripts/jquery-1.9.1.js"></script>
-    <!--<script src="/_layouts/15/SP.Runtime.js"></script>
-    <script src="/_layouts/15/SP.js"></script>
-    <script src="/_layouts/15/SP.RequestExecutor.js"></script>-->
     <script src="/_layouts/15/SP.UI.Controls.js"></script>
     <script src="Scripts/angular.js"></script>
     <script src="Scripts/angular-resource.js"></script>
@@ -47,59 +44,20 @@
     <script src="App/app.js"></script>
 
     <!-- controllers -->
-    <script src="App/Controllers/SharePointAppChromeController.js"></script>
-    <script src="App/Controllers/MainController.js"></script>
-    <script src="App/Controllers/ListarEventosController.js"></script>
-    <script src="App/Controllers/DetalharEventosController.js"></script>
+    <script src="App/Controllers/sharepointAppChromeController.js"></script>
+    <script src="App/Controllers/mainController.js"></script>
+    <script src="App/Controllers/detalharEventosController.js"></script>
+    <script src="App/Controllers/eventosController.js"></script>
 
     <!-- services -->
-    <!--<script src="App/Services/EventosService.js"></script>-->
-    <!--<script src="App/Services/SharePointEventosService.js"></script>-->
+    <script src="App/Services/sharepointContextService.js"></script>
     <script src="App/Services/inscricaoService.js"></script>
     <script src="App/Services/usuarioService.js"></script>
-    <script src="App/Services/SharePointDataContextService.js"></script>
-    <script src="App/Services/SharePointContextService.js"></script>
+    <script src="App/Services/eventoService.js"></script>
 </head>
 <body>
-
     <div data-ng-include="'App/Views/layout/sharepointAppChrome.html'"></div>
-    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="#">Project name</a>
-            </div>
-            <div class="collapse navbar-collapse">
-                <ul class="nav navbar-nav">
-                    <li class="active"><a href="#">Home</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
-                        <ul class="dropdown-menu" role="menu">
-                            <li><a href="#">Action</a></li>
-                            <li><a href="#">Another action</a></li>
-                            <li><a href="#">Something else here</a></li>
-                            <li class="divider"></li>
-                            <li class="dropdown-header">Nav header</li>
-                            <li><a href="#">Separated link</a></li>
-                            <li><a href="#">One more separated link</a></li>
-                        </ul>
-                    </li>
-                </ul>
-                <ul class="nav navbar-nav navbar-right">
-                    <li class="active"><a href="./">Default</a></li>
-                    <li><a href="../navbar-static-top/">Static top</a></li>
-                    <li><a href="../navbar-fixed-top/">Fixed top</a></li>
-                </ul>
-            </div><!--/.nav-collapse -->
-        </div>
-    </div>
+    <div data-ng-include="'App/Views/layout/header.html'"></div>
     <div data-ng-view class="view-container"></div>
     <div class="container">
         <hr />
